# BakcylProgramowania2021

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
cmake/: add_ut.cmake
src/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  product.cpp  product.hpp  productInstance.cpp  productInstance.hpp
src/core/: CMakeLists.txt  Core.cpp  Core.hpp
src/gui/: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.hpp  Gui.cpp  Gui.hpp  ProductDataHandler.cpp  ProductDataHandler.hpp  ProductInstanceModel.cpp  ProductInstanceModel.hpp  ProductModel.cpp  ProductModel.hpp  SearchboxController.cpp  searchboxcontroller.cpp  searchboxcontroller.hpp
src/gui/resources/: AddProductInstanceWindow.qml  AddProductWindow.qml  ProductInstanceList.qml  ProductList.qml  ProductWindow.qml  main.qml  qml.qrc
src/json/: CMakeLists.txt  Json.cpp  Json.hpp
src/mail/: CMakeLists.txt  Mail.cpp  Mail.hpp
src/proxy/: CMakeLists.txt  Proxy.cpp  Proxy.hpp  baseProxy.hpp  converters.cpp  converters.hpp  sqlProxy.cpp  sqlProxy.hpp
src/sap/: CMakeLists.txt  Sap.cpp  Sap.hpp
src/sql/: CMakeLists.txt  Location.cpp  Location.hpp  Product.cpp  Product.hpp  ProductInstance.cpp  ProductInstance.hpp  Sql.cpp  Sql.hpp  credentials.json  database.sql
src/sql/examples/: Product.hpp  Sql.hpp  database.sql
test/: CMakeLists.txt  main.cpp
test/core/: CMakeLists.txt  CoreTest.cpp
test/gui/: CMakeLists.txt
test/json/: CMakeLists.txt  JsonTest.cpp
test/mail/: CMakeLists.txt  MailTest.cpp
test/proxy/: CMakeLists.txt  ProxyTest.cpp
test/sap/: CMakeLists.txt  SapTest.cpp
test/sql/: CMakeLists.txt  SqlTest.cpp  SqlTestFixture.hpp
